Creation of Login Form

--- a/static/css/designblog.css
+++ b/static/css/designblog.css
@@ -1,4 +1,8 @@
 
+/*
+Remove Useless Components
+Modify Styling for Blog Post.
+ */
 .bodyMessage {
     margin: 0 auto;
     max-width: 820px;
@@ -75,4 +79,42 @@
 #chatdivider {
     background-color: white;
     height: 1px;
+}
+
+.content-section {
+  background: #ffffff;
+  padding: 10px 20px;
+  border: 1px solid #dddddd;
+  border-radius: 3px;
+  margin-bottom: 20px;
+}
+
+.article-title {
+  color: #444444;
+}
+
+a.article-title:hover {
+  color: #428bca;
+  text-decoration: none;
+}
+
+.article-content {
+  white-space: pre-line;
+}
+
+.article-img {
+  height: 65px;
+  width: 65px;
+  margin-right: 16px;
+}
+
+.article-metadata {
+  padding-bottom: 1px;
+  margin-bottom: 4px;
+  border-bottom: 1px solid #e3e3e3
+}
+
+.article-metadata a:hover {
+  color: #333;
+  text-decoration: none;
 }
