--- a/templates/connect.html
+++ b/templates/connect.html
@@ -33,7 +33,7 @@
 
 
                 <div id="btncenter">
-                    <button onclick="window.location.href = '/chatbot';" type="button" id="btnchatbot">Marty:ChatBot
+                    <button onclick="window.location.href = '/blog';" type="button" id="btnblog">Marty:ChatBot
                     </button>
                 </div>
 
