--- a/static/css/basedesign.css
+++ b/static/css/basedesign.css
@@ -50,3 +50,11 @@ hr {
     bottom: 0;
     width: 100%;
 }
+
+.content-section {
+  background: #ffffff;
+  padding: 10px 20px;
+  border: 1px solid #dddddd;
+  border-radius: 3px;
+  margin-bottom: 20px;
+}
