--- a/portfolio/templates/connect.html
+++ b/portfolio/templates/connect.html
@@ -28,12 +28,12 @@
                 </div>
 
                 <p class="lead font-weight-normal text-justify">If you are curious or want to know more about me, don't
-                    be shy and go
-                    talk to Marty! It's my own chat-bot to help you find quick information about me.</p>
+                    be shy and go read my blog! It's the place to help you find quick information about me and know more
+                    about me.</p>
 
 
                 <div id="btncenter">
-                    <button onclick="window.location.href = '/blog';" type="button" id="btnblog">Marty:ChatBot
+                    <button onclick="window.location.href = '/blog';" type="button" id="btnblog">Martin's Blog
                     </button>
                 </div>
 
