--- a/portfolio/static/css/extradesign.css
+++ b/portfolio/static/css/extradesign.css
@@ -161,3 +161,10 @@ td, th, thead {
         align-items: stretch;
     }
 }
+
+.account-img {
+  height: 125px;
+  width: 125px;
+  margin-right: 20px;
+  margin-bottom: 16px;
+}
