--- a/portfolio/templates/admin.html
+++ b/portfolio/templates/admin.html
@@ -6,7 +6,7 @@
 {% block body %}
 
     <div class="container jumbotron my-4">
-
+        <h2>Admin Tools</h2>
         <div class="content-section">
             <div class="media">
                 <img class="rounded-circle account-img" src="{{ image_file }}">
@@ -56,15 +56,56 @@
                             {% endfor %}
                         {% endif %}
                     </div>
+                    <div class="form-group">
+                        {{ form.skillName.label(class="form-control-label") }}
+                        {% if form.skillName.errors %}
+                            {{ form.skillName(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.skillName.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.skillName(class="form-control form-control-lg") }}
+                        {% endif %}
+                    </div>
                 </fieldset>
                 <div class="form-group">
                     {{ form.submit(class="btn btn-outline-info") }}
                 </div>
             </form>
-
-
         </div>
 
+        <div class="content-section">
+            <h4> User Information </h4>
+            <br>
+
+            <table class="table table-striped table-dark">
+                <thead>
+                <tr>
+                    <th class="text-warning" scope="col">UserID</th>
+                    <th class="text-warning" scope="col">Username</th>
+                    <th class="text-warning" scope="col">Email</th>
+                    <th class="text-warning" scope="col">Image_File</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for user in users %}
+
+                    <tr>
+                        <td class="text-white">{{ user.id }}</td>
+                        <td class="text-white">{{ user.username }}</td>
+                        <td class="text-white">{{ user.email }}</td>
+                        <td class="text-white">{{ user.image_file }}</td>
+                    </tr>
+
+                {% endfor %}
+
+
+                </tbody>
+            </table>
+
+        </div>
     </div>
 
 
