--- a/portfolio/templates/blog.html
+++ b/portfolio/templates/blog.html
@@ -14,11 +14,11 @@
         <header id="chatbotheader">
             <h4>Martin's Blog</h4>
             <p class="lead text-dark">
-               Here are some blog posts from myself and from my previous teammates.</p>
+                Here are some blog posts from myself and from my previous teammates.</p>
         </header>
 
         {% if current_user.is_authenticated %}
-            <a  class="btn btn-outline-primary"href="{{ url_for('new_post') }}">
+            <a class="btn btn-outline-primary" href="{{ url_for('new_post') }}">
                 Create New Post
             </a>
             <br>
@@ -34,7 +34,12 @@
                         <a class="mr-2 text-primary" href="#">{{ post.author.username }}</a>
                         <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
                     </div>
-                    <h2><a class="article-title" href="{{ url_for('post', post_id=post.id) }}">{{ post.title }}</a></h2>
+                    {% if current_user.is_authenticated %}
+                        <h2><a class="article-title" href="{{ url_for('post', post_id=post.id) }}">{{ post.title }}</a></h2>
+                    {% else %}
+                        <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+                    {% endif %}
+
                     <p class="article-content">{{ post.content }}</p>
                 </div>
             </article>
