--- a/portfolio/templates/blog.html
+++ b/portfolio/templates/blog.html
@@ -18,7 +18,7 @@
         </header>
 
         {% if current_user.is_authenticated %}
-            <a class="btn btn-outline-primary" href="{{ url_for('new_post') }}">
+            <a class="btn btn-outline-primary" href="{{ url_for('posts.new_post') }}">
                 Create New Post
             </a>
             <br>
@@ -35,7 +35,7 @@
                         <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
                     </div>
                     {% if current_user.is_authenticated %}
-                        <h2><a class="article-title" href="{{ url_for('post', post_id=post.id) }}">{{ post.title }}</a></h2>
+                        <h2><a class="article-title" href="{{ url_for('posts.post', post_id=post.id) }}">{{ post.title }}</a></h2>
                     {% else %}
                         <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
                     {% endif %}
