--- a/portfolio/templates/game.html
+++ b/portfolio/templates/game.html
@@ -10,7 +10,7 @@
 
     <div class="jumbotron my-4">
         <h4 class="display-6 text-dark">Easter Egg: Click on any dot!</h4>
-        <a href="{{ url_for('homepage') }}" class=" btn btn-primary">Go back to Home Page</a>
+        <a href="{{ url_for('main.homepage') }}" class=" btn btn-primary">Go back to Home Page</a>
     </div>
 
     <div class="containerAnimation">
