Create Custom Error Pages

--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -107,7 +107,7 @@
 </div>
 
 <!-- Footer -->
-
+{% block footer %}
 <footer class="font-small pt-3 bg-blue footersticky" style="background-color: #004aad" ;
 ">
 
@@ -176,7 +176,7 @@
 </div>
 
 </footer>
-
+{% endblock footer %}
 <!-- Footer -->
 
 
